k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jguard
  labels:
    name: jguard
    environment: production
