k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jarsenal
  namespace: jarsenal
  labels:
    app: jarsenal
spec:
  type: ClusterIP
  selector:
    app: jarsenal
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
